FIX: overflow

--- a/css/base.css
+++ b/css/base.css
@@ -16,6 +16,10 @@ html {
   font-family: "Inter", sans-serif;
 }
 
+body {
+  overflow-x: hidden;
+}
+
 main,
 footer {
   position: relative;
